feat: preparar activacion de pedidos web
Resolucion de bug  en observacio produccio y listo para la activacion de woocommerce
